@@ -289,6 +289,26 @@ void MISCEvent_WriteEnabledOperations (FILE * fd, long long options)
 		  DYNAMIC_MEM_POINTER_OUT_EV,
 		  DYNAMIC_MEM_POINTER_OUT_LBL);
 		LET_SPACES (fd);
+
+		fprintf (fd, "%s\n", TYPE_LABEL);
+                fprintf (fd, "%d    %d    %s\n", MISC_GRADIENT, MEMKIND_PARTITION_EV, MEMKIND_PARTITION_LBL);
+		fprintf (fd, "%s\n", VALUES_LABEL);
+		fprintf (fd, "%d      %s\n", EVT_END, EVT_END_LBL);
+		fprintf (fd, "%d      %s\n", MEMKIND_PARTITION_DEFAULT_VAL, MEMKIND_PARTITION_DEFAULT_LBL);
+		fprintf (fd, "%d      %s\n", MEMKIND_PARTITION_HBW_VAL, MEMKIND_PARTITION_HBW_LBL);
+		fprintf (fd, "%d      %s\n", MEMKIND_PARTITION_HBW_HUGETLB_VAL, MEMKIND_PARTITION_HBW_HUGETLB_LBL);
+		fprintf (fd, "%d      %s\n", MEMKIND_PARTITION_HBW_PREFERRED_VAL, MEMKIND_PARTITION_HBW_PREFERRED_LBL);
+		fprintf (fd, "%d      %s\n", MEMKIND_PARTITION_HBW_PREFERRED_HUGETLB_VAL, MEMKIND_PARTITION_HBW_PREFERRED_HUGETLB_LBL);
+		fprintf (fd, "%d      %s\n", MEMKIND_PARTITION_HUGETLB_VAL, MEMKIND_PARTITION_HUGETLB_LBL);
+		fprintf (fd, "%d      %s\n", MEMKIND_PARTITION_HBW_GBTLB_VAL, MEMKIND_PARTITION_HBW_GBTLB_LBL);
+		fprintf (fd, "%d      %s\n", MEMKIND_PARTITION_HBW_PREFERRED_GBTLB_VAL, MEMKIND_PARTITION_HBW_PREFERRED_GBTLB_LBL);
+		fprintf (fd, "%d      %s\n", MEMKIND_PARTITION_GBTLB_VAL, MEMKIND_PARTITION_GBTLB_LBL);
+		fprintf (fd, "%d      %s\n", MEMKIND_PARTITION_HBW_INTERLEAVE_VAL, MEMKIND_PARTITION_HBW_INTERLEAVE_LBL);
+		fprintf (fd, "%d      %s\n", MEMKIND_PARTITION_INTERLEAVE_VAL, MEMKIND_PARTITION_INTERLEAVE_LBL);
+		fprintf (fd, "%d      %s\n", MEMKIND_PARTITION_OTHER_VAL, MEMKIND_PARTITION_OTHER_LBL);
+
+		LET_SPACES (fd);
+
 	}
 	if (inuse[SAMPLING_MEM_INDEX])
 	{
