@@ -61,6 +61,20 @@ void Share_MISC_Operations (void);
 #define DYNAMIC_MEM_POINTER_IN_LBL      "In pointer (free, realloc)"
 #define DYNAMIC_MEM_POINTER_OUT_LBL     "Out pointer (malloc, calloc, realloc)"
 
+#define MEMKIND_PARTITION_LBL				"Memkind partition"
+#define MEMKIND_PARTITION_OTHER_LBL			"Other"
+#define MEMKIND_PARTITION_DEFAULT_LBL			"Default"
+#define MEMKIND_PARTITION_HBW_LBL			"HBW"
+#define MEMKIND_PARTITION_HBW_HUGETLB_LBL		"HBW Huge TLB"
+#define MEMKIND_PARTITION_HBW_PREFERRED_LBL		"HBW Preferred"
+#define MEMKIND_PARTITION_HBW_PREFERRED_HUGETLB_LBL	"HBW Preferred Huge TLB"
+#define MEMKIND_PARTITION_HUGETLB_LBL			"Huge TLB"
+#define MEMKIND_PARTITION_HBW_GBTLB_LBL			"HBW GBTLB"
+#define MEMKIND_PARTITION_HBW_PREFERRED_GBTLB_LBL 	"HBW Preferred GBTLB"
+#define MEMKIND_PARTITION_GBTLB_LBL			"GBTLB"
+#define MEMKIND_PARTITION_HBW_INTERLEAVE_LBL		"HBW Interleave"
+#define MEMKIND_PARTITION_INTERLEAVE_LBL		"Interleave"
+
 #define SAMPLING_ADDRESS_LD_LBL             "Sampled address (load)"
 #define SAMPLING_ADDRESS_ST_LBL             "Sampled address (store)"
 #define SAMPLING_ADDRESS_MEM_LEVEL_LBL      "Memory hierarchy location for sampled address"
