@@ -21,6 +21,7 @@ libwrap_malloc_la_CFLAGS = \
 
 if HAVE_MEMKIND
 libwrap_malloc_la_CFLAGS += ${MEMKIND_CFLAGS}
+libwrap_malloc_la_LDFLAGS = ${MEMKIND_LDFLAGS} ${MEMKIND_LIBS}
 endif
 
 libwrap_malloc_la_SOURCES = $(WRAPPERS_MALLOC)
