@@ -140,11 +140,12 @@ void Probe_posix_memalign_Exit(void *ptr)
         }
 }
 
-void Probe_memkind_malloc_Entry(size_t size)
+void Probe_memkind_malloc_Entry(int kind, size_t size)
 {
 	if (mpitrace_on && trace_malloc)
 	{
 		TRACE_MISCEVENTANDCOUNTERS(LAST_READ_TIME, MEMKIND_MALLOC_EV, EVT_BEGIN, size);
+		TRACE_MISCEVENT(LAST_READ_TIME, MEMKIND_PARTITION_EV, kind, EMPTY);
 	}
 }
 
@@ -153,14 +154,16 @@ void Probe_memkind_malloc_Exit(void *ptr)
 	if (mpitrace_on && trace_malloc)
 	{
 		TRACE_MISCEVENTANDCOUNTERS(TIME, MEMKIND_MALLOC_EV, EVT_END, (UINT64) ptr);
+		TRACE_MISCEVENT(LAST_READ_TIME, MEMKIND_PARTITION_EV, EMPTY, EMPTY);
 	}
 }
 
-void Probe_memkind_calloc_Entry(size_t num, size_t size)
+void Probe_memkind_calloc_Entry(int kind, size_t num, size_t size)
 {
 	if (mpitrace_on && trace_malloc)
 	{
 		TRACE_MISCEVENTANDCOUNTERS(LAST_READ_TIME, MEMKIND_CALLOC_EV, EVT_BEGIN, num*size);
+		TRACE_MISCEVENT(LAST_READ_TIME, MEMKIND_PARTITION_EV, kind, EMPTY);
 	}
 }
 
@@ -169,16 +172,18 @@ void Probe_memkind_calloc_Exit(void *ptr)
 	if (mpitrace_on && trace_malloc)
 	{
 		TRACE_MISCEVENTANDCOUNTERS(LAST_READ_TIME, MEMKIND_CALLOC_EV, EVT_END, (UINT64) ptr);
+		TRACE_MISCEVENT(LAST_READ_TIME, MEMKIND_PARTITION_EV, EMPTY, EMPTY);
 	}
 }
 
-void Probe_memkind_realloc_Entry(void *ptr, size_t size)
+void Probe_memkind_realloc_Entry(int kind, void *ptr, size_t size)
 {
 	if (mpitrace_on && trace_malloc)
 	{
 		/* Split ptr & size in two events. There's no need to read counters for the second event */
 		TRACE_MISCEVENTANDCOUNTERS(LAST_READ_TIME, MEMKIND_REALLOC_EV, EVT_BEGIN, (UINT64) ptr);
 		TRACE_MISCEVENT(LAST_READ_TIME, MEMKIND_REALLOC_EV, EVT_BEGIN+1, size);
+		TRACE_MISCEVENT(LAST_READ_TIME, MEMKIND_PARTITION_EV, kind, EMPTY);
 	}
 }
 
@@ -187,14 +192,16 @@ void Probe_memkind_realloc_Exit(void *ptr)
 	if (mpitrace_on && trace_malloc)
 	{
 		TRACE_MISCEVENTANDCOUNTERS(TIME, MEMKIND_REALLOC_EV, EVT_END, (UINT64) ptr);
+		TRACE_MISCEVENT(LAST_READ_TIME, MEMKIND_PARTITION_EV, EMPTY, EMPTY);
 	}
 }
 
-void Probe_memkind_posix_memalign_Entry(size_t size)
+void Probe_memkind_posix_memalign_Entry(int kind, size_t size)
 {
 	if (mpitrace_on && trace_malloc)
 	{
 		TRACE_MISCEVENTANDCOUNTERS(LAST_READ_TIME, MEMKIND_POSIX_MEMALIGN_EV, EVT_BEGIN, size);
+		TRACE_MISCEVENT(LAST_READ_TIME, MEMKIND_PARTITION_EV, kind, EMPTY);
 	}
 }
 
@@ -203,14 +210,16 @@ void Probe_memkind_posix_memalign_Exit(void *ptr)
 	if (mpitrace_on && trace_malloc)
 	{
 		TRACE_MISCEVENTANDCOUNTERS(TIME, MEMKIND_POSIX_MEMALIGN_EV, EVT_END, ptr);
+		TRACE_MISCEVENT(LAST_READ_TIME, MEMKIND_PARTITION_EV, EMPTY, EMPTY);
 	}
 }
 
-void Probe_memkind_free_Entry(void *ptr)
+void Probe_memkind_free_Entry(int kind, void *ptr)
 {
 	if (mpitrace_on && trace_malloc)
 	{
 		TRACE_MISCEVENTANDCOUNTERS(LAST_READ_TIME, MEMKIND_FREE_EV, EVT_BEGIN, (UINT64) ptr);
+                TRACE_MISCEVENT(LAST_READ_TIME, MEMKIND_PARTITION_EV, kind, EMPTY);
 	}
 }
 
@@ -219,6 +228,7 @@ void Probe_memkind_free_Exit()
 	if (mpitrace_on && trace_malloc)
 	{
 		TRACE_MISCEVENTANDCOUNTERS(TIME, MEMKIND_FREE_EV, EVT_END, EMPTY);
+		TRACE_MISCEVENT(LAST_READ_TIME, MEMKIND_PARTITION_EV, EMPTY, EMPTY);
 	}
 }
 
